@@ -2800,3 +2800,4 @@
 ( cvs diff -u -r 1.94.2.146 -r 1.94.2.147 src/messageview.c;  ) > 2.10.0cvs143.patchset
 ( cvs diff -u -r 1.105.2.108 -r 1.105.2.109 src/prefs_account.c;  ) > 2.10.0cvs144.patchset
 ( cvs diff -u -r 1.2.4.19 -r 1.2.4.20 src/browseldap.c;  cvs diff -u -r 1.8.2.26 -r 1.8.2.27 src/editldap.c;  cvs diff -u -r 1.2.2.14 -r 1.2.2.15 src/ldapctrl.c;  cvs diff -u -r 1.3.2.22 -r 1.3.2.23 src/ldapquery.c;  cvs diff -u -r 1.4.2.13 -r 1.4.2.14 src/ldapserver.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/ldapupdate.c;  cvs diff -u -r 1.1.4.9 -r 1.1.4.10 src/ldaputil.c;  ) > 2.10.0cvs145.patchset
+( cvs diff -u -r 1.8.2.27 -r 1.8.2.28 src/editldap.c;  cvs diff -u -r 1.1.4.10 -r 1.1.4.11 src/ldaputil.c;  ) > 2.10.0cvs146.patchset
