@@ -11,7 +11,7 @@ MINOR_VERSION=10
 MICRO_VERSION=0
 INTERFACE_AGE=0
 BINARY_AGE=0
-EXTRA_VERSION=145
+EXTRA_VERSION=146
 EXTRA_RELEASE=
 EXTRA_GTK2_VERSION=
 
